apps/base/iot-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-api
  template:
    metadata:
      labels:
        app: iot-api
        policy-type: "app"
    spec:
      containers:
        - name: iot-api
          image: iferdel777/iot-api:v1.0.1

          securityContext:
            allowPrivilegeEscalation: false

      restartPolicy: Always
