apps/base/iot-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-api
spec:
  type: ClusterIP
  selector:
    app: iot-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
