apps/base/iot-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-iot-api
  namespace: iot
spec:
  defaultBackend: 
    service:
      name: iot-api
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
  - hosts:
    - iot.tailbb8712.ts.net
